# Typing-

./: Application.cpp  Application.h  CMakeLists.txt  Cursor.cpp  Cursor.h  FileReader.cpp  FileReader.h  Font.cpp  Font.h  FontEnum.h  GUIComponent.h  Heap.cpp  Heap.h  History.cpp  History.h  HistoryNode.h  Keyboard_Shortcut.cpp  Keyboard_Shortcut.h  Letter.cpp  Letter.h  List  MultiText.cpp  MultiText.h  README.md  Snapshot.h  Snapshot_Interface.h  States.cpp  States.h  TextBox.cpp  TextBox.h  TextInput.cpp  TextInput.h  TextInputSnapshot.cpp  TextInputSnapshot.h  Title.cpp  Title.h  Typing.cpp  Typing.h  TypingNotChanged.cpp  TypingNotChanged.h  (+5 more)
